# shape_representation_models

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt  database_reader_default_config.yml  images_config.yml  shape_representation_models.yml
config/shape_representation_models/: config_all.srmconf  config_all_100.srmconf
data/: README
prj.cmake/: CMakeLists.txt  PrecompiledHeader.cmake  dpInstall.cmake
prj.core/: CMakeLists.txt
prj.core/dpcore/: CMakeLists.txt  common.h  contour_comparer.h  filesystem.h  geometry.h  object.h
prj.core/dpcore/src/: common.cpp  contour_comparer.cpp  filesystem.cpp  geometry.cpp  object.cpp
prj.core/shape_representation_models/: CMakeLists.txt  abstract_area_model.h  abstract_contour_model.h  abstract_model.h  abstract_other_model.h  centered_points.h  compressed_quad_tree.h  configuration.h  deflate_model.h  difference_chain_code.h  fourier.h  freeman_chain_code.h  freeman_chain_code_RLE.h  grid.h  grid_n.h  points.h  polygon_model.h  pyramid.h  quad_tree.h  resampling_chain_code.h  run_length_encoding.h  shape_representation_experimental_stand.h
prj.core/shape_representation_models/src/: abstract_area_model.cpp  abstract_contour_model.cpp  abstract_other_model.cpp  centered_points.cpp  compressed_quad_tree.cpp  deflate_model.cpp  difference_chain_code.cpp  fourier.cpp  freeman_chain_code.cpp  freeman_chain_code_RLE.cpp  grid.cpp  grid_n.cpp  main.cpp  points.cpp  polygon_model.cpp  pyramid.cpp  quad_tree.cpp  resampling_chain_code.cpp  run_length_encoding.cpp  shape_representation_experimental_stand.cpp
prj.tests/: CMakeLists.txt
prj.tests/database_reader_config_test/: CMakeLists.txt
prj.tests/database_reader_config_test/src/: database_reader_config_test.cpp
prj.tests/utils/: CMakeLists.txt
prj.tests/utils/src/: image_db_loader_test.cpp  interval_string_parser_test.cpp
prj.utils/: CMakeLists.txt
prj.utils/image_db_loader/: CMakeLists.txt  image_loader.h  images_config_parser.h  interval_string_parser.h
prj.utils/image_db_loader/src/: image_loader.cpp  images_config_parser.cpp  interval_string_parser.cpp
prj.utils/text/: CMakeLists.txt  interval_string_parser.h
prj.utils/text/src/: interval_string_parser.cpp
